tests/test-no-std/ui/no_vec.stderr
error: alloc feature is required to parse into a Vec.
 --> ui/no_vec.rs:4:10
  |
4 | #[prse = "({:,:})"]
  |          ^^^^^^^^^

error: alloc feature is required to parse into a Vec.
 --> ui/no_vec.rs:9:33
  |
9 |     let v: Vec<u32> = parse!(l, "test: {:,:   }");
  |                                 ^^^^^^^^^^^^^^^^
